<resources>
    <string name="facebook_app_id">2094171727560943</string>
    <string name="app_name">MangoWallet</string>
    <string name="str_home">Home</string>
    <string name="str_mgptoken">mgpToken</string>
    <string name="str_ethereum">以太坊</string>
    <string name="str_bitcoin">比特币</string>
    <string name="str_eosio">eosio</string>
    <string name="str_loading">正在加载</string>
    <string name="str_no_empty_data">暂无数据</string>
    <string name="str_my">我的</string>
    <string name="str_wallet">钱包</string>
    <string name="str_apps">应用</string>
    <string name="str_store">商城</string>
    <string name="str_invite_friends_create">邀请好友创建</string>
    <string name="str_inactive">未激活</string>
    <string name="str_asset">资产</string>
    <string name="str_vote">节点投票</string>
    <string name="str_assets">资源管理</string>
    <string name="str_all">全部</string>
    <string name="str_out">转出</string>
    <string name="str_into">转入</string>
    <string name="str_fail">失败</string>
    <string name="str_proceeds">收款</string>
    <string name="str_transfer">转账</string>
    <string name="str_yesterday">昨天</string>
    <string name="str_before_yesterday">前天</string>
    <string name="str_updated_on">更新于 %s</string>
    <string-array name="str_dates">
        <item>年</item>
        <item>月</item>
        <item>日</item>
        <item>时</item>
        <item>分</item>
        <item>秒</item>
    </string-array>
    <string-array name="str_weeks">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string-array name="str_moments_day">
        <item>中午</item>
        <item>凌晨</item>
        <item>早上</item>
        <item>下午</item>
        <item>晚上</item>
    </string-array>
    <string name="str_hello">您好，</string>
    <string name="str_welcome">欢迎使用</string>
    <string name="str_prompt_account">账户名/邮箱/手机号</string>
    <string name="str_prompt_password">密码</string>
    <string name="str_forget_password">忘记密码</string>
    <string name="str_login">登录</string>
    <string name="str_register">新用户注册</string>
    <string name="str_login_explain">登录即表示您同意</string>
    <string name="str_privacy_policy">《隐私政策》</string>
    <string name="str_prompt_app">MGPChain基于账户体系，需要登录使用</string>
    <string name="str_search">搜索</string>
    <string name="str_location_code">国家/地区代码</string>
    <string name="str_reset_passwords">重置密码</string>
    <string name="str_select">选择</string>
    <string name="str_phonenumber">手机号</string>
    <string name="str_verification_code">验证码</string>
    <string name="str_phonenumber_verification_code">发送验证码</string>
    <string name="str_email_verification_code">发送到邮箱</string>
    <string name="str_retrieve_phone">通过手机找回</string>
    <string name="str_retrieve_email">通过邮箱找回</string>
    <string name="str_email">邮箱</string>
    <string name="str_prompt_account_name">账户名（6-12位字符）</string>
    <string name="str_register_prompt_password">设置登录密码（8-18位字符）</string>
    <string name="str_register_prompt_password_affirm">确认登录密码</string>
    <string name="str_complete">完成</string>
    <string name="str_account_registration">账户注册</string>
    <string name="str_identity_wallet">身份下的钱包</string>
    <string name="str_cancel">取消</string>
    <string name="str_import">导入</string>
    <string name="str_create">创建</string>
    <string name="str_create_title">创建%s钱包</string>
    <string name="str_wallet_name">钱包名称</string>
    <string name="str_wallet_password">密码（8-18位字符）</string>
    <string name="str_again_input_password">请再次输入密码</string>
    <string name="str_backups_mnemonic_tip">请仔细抄写下方助记词，我们将在下一步验证</string>
    <string name="str_nextStep">下一步</string>
    <string name="str_backup_mnemonics_confirm">请按顺序点击助记词，以确认您正确备份</string>
    <string name="str_privatekey_import_prompt">输入Private Key文件内容至输入框。或通过扫描Private Key内容生成的二维码录入。请留意字符大小写</string>
    <string name="str_mnemonic_import_prompt">使用助记词导入的同时可以修改钱包密码</string>
    <string name="str_keystore_import_prompt">复制粘贴%s钱包Keystore文件内容至输入框，或通过扫描Keystore内容生成的二维码录入</string>
    <string name="str_start_import">开始导入</string>
    <string name="str_lamplight">灯光</string>
    <string name="str_photo">相册</string>
    <string name="str_crop_image">裁剪图片</string>
    <string name="str_qrcode_scan">二维码扫描</string>
    <string name="str_qrcode_scan_details">将二维码放入框内，即可自动扫描</string>
    <string name="permission_rationale_message">您已经拒绝我们的授权申请，请同意授权，否则该功能将无法正常使用!</string>
    <string name="str_qrcode_explain_1">将二维码/条码放入框内，即可自动扫描</string>
    <string name="str_qrcode_explain_2">将条码放入框内，即可自动扫描</string>
    <string name="str_qrcode_explain_3">\n环境过暗，请打开闪光灯</string>
    <string name="str_account_name_rule">账户名称为a~z与1~5组合的12位字节</string>
    <string name="str_password_prompt_msg">密码提示信息（可不填）</string>
    <string name="str_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="str_pwd_inconformity_rule_tips">密码不符合规则</string>
    <string name="str_create_wallet">创建钱包</string>
    <string name="str_create_wallet_succeed">创建钱包成功</string>
    <string name="str_deriving_wallet_tip">导出钱包中…</string>
    <string name="str_loading_wallet_tip">导入钱包中…</string>
    <string name="str_deleting_wallet_tip">删除钱包中…</string>
    <string name="str_creating_wallet_tip">创建钱包中…</string>
    <string name="str_saving_wallet_tip">保存钱包中…</string>
    <string name="str_import_wallet_fail">钱包导入失败</string>
    <string name="str_wallet_exist">钱包已存在</string>
    <string name="str_add_wallet_success">钱包添加成功</string>
    <string name="str_backup_wallet">备份钱包</string>
    <string name="str_backup_wallet_msg">没有妥善备份就无法保障资产安全。删除程序或钱包后，您需要备份文件恢复钱包。</string>
    <string name="str_backup_mnemonic">备份助记词</string>
    <string name="str_backup_mnemonics_error">助记词顺序不正确，请校对</string>
    <string name="str_privatekey">私钥</string>
    <string name="str_mnemonic_word">助记词</string>
    <string name="str_keystore">Keystore</string>
    <string name="str_import_title">导入%s钱包</string>
    <string name="str_input_keystore">keystore 文本内容</string>
    <string name="str_input_mnemonic">助记词，按空格分隔</string>
    <string name="str_input_privatekey">明文私钥</string>
    <string name="str_load_wallet_by_mnemonic_input_tip">请检查您的助记词</string>
    <string name="str_walletname_exist">该钱包名称已存在</string>
    <string name="str_please_walletname">请输入钱包名称</string>
    <string name="str_please_privatekey">请输入私钥</string>
    <string name="str_invalid_privatekey">无效的私钥</string>
    <string name="str_please_keystore">请输入Keystore</string>
    <string name="str_invalid_keystore">keystore文件无效</string>
    <string name="str_import_wallet_success">导入钱包成功</string>
    <string name="str_account_name">账户名</string>
    <string name="str_owner_publickey">owner公钥</string>
    <string name="str_active_publickey">active公钥</string>
    <string name="str_share_code">分享二维码</string>
    <string name="str_select_account">选择%s账户</string>
    <string name="str_register_account">注册%s账户</string>
    <string name="str_copy_text">复制文本</string>
    <string name="str_copy_link">复制链接</string>
    <string name="str_share_success">分享成功啦!</string>
    <string name="str_collect_success">收藏成功啦!</string>
    <string name="str_share_fail">分享失败啦!</string>
    <string name="str_collect_fail">收藏失败啦!</string>
    <string name="str_share_cancel">分享取消了</string>
    <string name="str_prompt_message">提示信息</string>
    <string name="str_copy">复制</string>
    <string name="str_copy_success">复制成功</string>
    <string name="str_ram">内存</string>
    <string name="str_buy">买入</string>
    <string name="str_sale">卖出</string>
    <string name="str_quantity_less_than_0">数量不能小于0</string>
    <string name="str_enter_receiving_account">请输入接收账户</string>
    <string name="str_total_assets">总资产</string>
    <string name="str_balance_1">余额</string>
    <string name="str_redemptioning">赎回中</string>
    <string name="str_pledge">抵押</string>
    <string name="str_cpu">CPU</string>
    <string name="str_net">宽带</string>
    <string name="str_redemption">赎回</string>
    <string name="str_current_price">当前价格</string>
    <string name="str_enter_quantity_number">请输入MGP数量</string>
    <string name="str_receiving_account">接收账户</string>
    <string name="str_ram_explain">*支持转给其他账户购买内存</string>
    <string name="str_password_authentification">密码验证</string>
    <string name="str_enter_password">请输入密码</string>
    <string name="str_ok">确定</string>
    <string name="str_wrong_password">密码错误</string>
    <string name="str_network">网络</string>
    <string name="str_available_cpu">可用CPU</string>
    <string name="str_available_net">可用NET</string>
    <string name="str_pledge_amount">抵押数量</string>
    <string name="str_pledge_rate">抵押比率</string>
    <string name="str_redemption_net">赎回NET</string>
    <string name="str_redemption_cpu">赎回CPU</string>
    <string name="str_redemption_cpu_restrict">赎回CPU不可大于抵押数额</string>
    <string name="str_redemption_net_restrict">赎回NET不可大于抵押数额</string>
    <string name="str_wallet_password2">钱包密码</string>
    <string name="str_valid_accountname">可用</string>
    <string name="str_resource_administration">资源管理</string>
    <string name="str_balance_value">余额:%s</string>
    <string name="str_no_more_balance">不能超过余额</string>
    <string name="str_delete_wallet">删除钱包</string>
    <string name="str_wallet_manage">钱包管理</string>
    <string name="str_wallet_address">钱包账户</string>
    <string name="str_change_password">修改密码</string>
    <string name="str_export_privateKey">导出私钥</string>
    <string name="str_export_mnemonicword">导出助记词</string>
    <string name="str_export_keystore">导出Keystore</string>
    <string name="str_permissions_view">权限查看</string>
    <string name="str_create_wallet_explain">·密码用于保护私钥和交易授权，强度非常重要。\n·本产品不存储密码，也无法帮你找回，请务必记牢。</string>
    <string name="str_confirm_password">确认密码</string>
    <string name="str_modify_success">修改成功</string>
    <string name="str_again_exit">再按一次退出</string>
    <string name="str_transaction_record">交易记录</string>
    <string name="str_send">发送方</string>
    <string name="str_receive">接收方</string>
    <string name="str_transaction_id">交易号</string>
    <string name="str_block_height">区块高度</string>
    <string name="str_transaction_time">交易时间</string>
    <string name="str_memo">备注</string>
    <string name="str_to_transaction_detailed">到explorer查询更详细信息</string>
    <string name="str_trading_particulars">交易详情</string>
    <string name="str_web_refresh">刷新</string>
    <string name="str_external_browser_open">浏览器打开</string>
    <string name="str_transaction_success">交易成功</string>
    <string name="str_transaction_fail">交易失败</string>
    <string name="str_transaction_delay">交易被延迟执行</string>
    <string name="str_purchase_quantity">购买数量</string>
    <string name="str_input_quantity">请输入数额</string>
    <string name="str_collection_address">收款地址</string>
    <string name="str_input_accountname">请输入钱包地址</string>
    <string name="str_enter_remarks">请输入备注，可不填</string>
    <string name="str_RichScan">扫一扫</string>
    <string name="str_shoppingcart">购物车</string>
    <string name="str_classify">分类</string>
    <string name="address_consignee">收件人姓名</string>
    <string name="address_tel">手机号码</string>
    <string name="address_region">所在地区</string>
    <string name="address_detail">详细地址</string>
    <string name="default_address_set">设为默认地址</string>
    <string name="address_hint_consignee">请如实填写收件人姓名</string>
    <string name="address_hint_tel">请如实填写手机号码</string>
    <string name="address_hint_region">省, 市, 区</string>
    <string name="address_hint_detail">请如实填写收件人详细地址</string>
    <string name="address_action_save_and_use">保存并使用</string>
    <string name="str_please_choose">请选择</string>
    <string name="str_united_states">国家地区</string>
    <string name="str_seller_contact">卖家联系方式</string>
    <string name="str_transaction_detail">交易明细</string>
    <string name="str_payment_method">付款方式</string>
    <string name="action_sign_in">Sign in or register</string>
</resources>