<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.token.mangowallet.ui.home.WalletController"
        android:label="@string/str_wallet"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_apps"
        android:name="com.token.mangowallet.ui.home.AppsController"
        android:label="@string/str_apps"
        tools:layout="@layout/fragment_dashboard" />

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_store"-->
    <!--        android:name="com.token.mangowallet.ui.home.MyFragment"-->
    <!--        android:label="@string/str_store"-->
    <!--        tools:layout="@layout/fragment_store" />-->

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.token.mangowallet.ui.home.MyController"
        android:label="@string/str_my"
        tools:layout="@layout/fragment_notifications" />
</navigation>